@@ -370,15 +370,10 @@ class IndividualControllerRoot extends BaseController {
 		if ($this->canShowHighlightedObject()) {
 			$firstmediarec = $this->indi->findHighlightedMedia();
 			if (!empty($firstmediarec)) {
-				if ($USE_THUMBS_MAIN) {
-					$filename = $firstmediarec["thumb"];
-					$class = "thumbnail";
-				} else {
-					$filename = $firstmediarec["file"];
+				$filename = thumb_or_main($firstmediarec);		// Do we send the main image or a thumbnail?
+				if (!$USE_THUMBS_MAIN || $firstmediarec["_THUM"]=='Y') {
 					$class = "image";
-				}
-				if (empty($filename)) {
-					$filename = $firstmediarec["thumb"];
+				} else {
 					$class = "thumbnail";
 				}
 				$isExternal = isFileExternal($filename);
@@ -391,19 +386,16 @@ class IndividualControllerRoot extends BaseController {
 					//Gets the Media View Link Information and Concatenate
 					$mid = $firstmediarec['mid'];
 
-					//LBox -------- addition for Lightbox Album --------------------------------------------
 					$name = $this->indi->getFullName();
 					if (file_exists("modules/lightbox/album.php")) {
 						print "<a href=\"" . $firstmediarec["file"] . "\" rel=\"clearbox[general_1]\" rev=\"" . $mid . "::" . $GEDCOM . "::" . PrintReady(htmlspecialchars($name,ENT_QUOTES,'UTF-8')) . "\">" . "\n";
 					}else
-					//Lbox -----------------------------------------------------------------------------------------
 
 					if (!$USE_MEDIA_VIEWER && $imgsize) {
 						$result .= "<a href=\"javascript:;\" onclick=\"return openImage('".encode_url(encrypt($firstmediarec["file"]))."',$imgwidth, $imgheight);\">";
 					}else{
 						$result .= "<a href=\"mediaviewer.php?mid={$mid}\">";
 					}
-					//LBox ---- $result .= "<img src=\"$filename\" align=\"left\" class=\"".$class."\" border=\"none\" alt=\"".$firstmediarec["file"]."\" />";
 					$result .= "<img src=\"$filename\" align=\"left\" class=\"".$class."\" border=\"none\" title=\"".PrintReady(htmlspecialchars(strip_tags($name),ENT_QUOTES,'UTF-8'))."\" alt=\"".PrintReady(htmlspecialchars(strip_tags($name),ENT_QUOTES,'UTF-8'))."\" />";
 					$result .= "</a>";
 					return $result;
@@ -651,23 +643,17 @@ class IndividualControllerRoot extends BaseController {
 		//-- main other menu item
 		$menu = new Menu($pgv_lang["other"]);
 		if ($SHOW_GEDCOM_RECORD) {
-			if (!empty($PGV_IMAGES["gedcom"]["small"]))
-				$menu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["gedcom"]["small"]);
-			if ($this->show_changes && PGV_USER_CAN_EDIT)
-				$menu->addOnclick("return show_gedcom_record('new');");
-			else
-				$menu->addOnclick("return show_gedcom_record('');");
-		}
-		else {
-			if (!empty($PGV_IMAGES["clippings"]["small"]))
-				$menu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["clippings"]["small"]);
+			if (!empty($PGV_IMAGES["gedcom"]["small"])) $menu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["gedcom"]["small"]);
+			if ($this->show_changes && PGV_USER_CAN_EDIT) $menu->addOnclick("return show_gedcom_record('new');");
+			else $menu->addOnclick("return show_gedcom_record('');");
+		} else {
+			if (!empty($PGV_IMAGES["clippings"]["small"])) $menu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["clippings"]["small"]);
 			$menu->addLink(encode_url("clippings.php?action=add&id={$this->pid}&type=indi"));
 		}
 		$menu->addClass("submenuitem$ff", "submenuitem_hover$ff", "submenu$ff");
-		if ($this->canShowGedcomRecord()) {
+		if ($SHOW_GEDCOM_RECORD) {
 			$submenu = new Menu($pgv_lang["view_gedcom"]);
-			if (!empty($PGV_IMAGES["gedcom"]["small"]))
-				$submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["gedcom"]["small"]);
+			if (!empty($PGV_IMAGES["gedcom"]["small"])) $submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["gedcom"]["small"]);
 			if ($this->show_changes && PGV_USER_CAN_EDIT) $submenu->addOnclick("return show_gedcom_record('new');");
 			else $submenu->addOnclick("return show_gedcom_record();");
 			$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff");
@@ -675,15 +661,13 @@ class IndividualControllerRoot extends BaseController {
 		}
 		if ($this->indi->canDisplayDetails() && $ENABLE_CLIPPINGS_CART>=PGV_USER_ACCESS_LEVEL) {
 			$submenu = new Menu($pgv_lang["add_to_cart"], encode_url("clippings.php?action=add&id={$this->pid}&type=indi"));
-			if (!empty($PGV_IMAGES["clippings"]["small"]))
-				$submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["clippings"]["small"]);
+			if (!empty($PGV_IMAGES["clippings"]["small"])) $submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["clippings"]["small"]);
 			$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff");
 			$menu->addSubmenu($submenu);
 		}
 		if ($this->indi->canDisplayDetails() && PGV_USER_NAME) {
 			$submenu = new Menu($pgv_lang["add_to_my_favorites"], encode_url($this->indi->getLinkUrl()."&action=addfav&gid={$this->pid}"));
-			if (!empty($PGV_IMAGES["gedcom"]["small"]))
-				$submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["gedcom"]["small"]);
+			if (!empty($PGV_IMAGES["gedcom"]["small"])) $submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["gedcom"]["small"]);
 			$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff");
 			$menu->addSubmenu($submenu);
 		}
