@@ -276,8 +276,9 @@ function print_pedigree_person($pid, $style=1, $show_famlink=true, $count=0, $pe
 	$name = $person->getFullName();
 	if ($MULTI_MEDIA && $SHOW_HIGHLIGHT_IMAGES && showFact("OBJE", $pid)) {
 		$object = $person->findHighlightedMedia();
-		if (!empty($object["thumb"])) {
-			$size = findImageSize($object["thumb"]);
+		if (!empty($object)) {
+			$whichFile = thumb_or_main($object);	// Do we send the main image or a thumbnail?
+			$size = findImageSize($whichFile);
 			$class = "pedigree_image_portrait";
 			if ($size[0]>$size[1]) $class = "pedigree_image_landscape";
 			if($TEXT_DIRECTION == "rtl") $class .= "_rtl";
@@ -286,18 +287,14 @@ function print_pedigree_person($pid, $style=1, $show_famlink=true, $count=0, $pe
 			$imgwidth = $imgsize[0]+50;
 			$imgheight = $imgsize[1]+150;
 
-			//LBox --------  change for Lightbox Album --------------------------------------------
 			if (file_exists("modules/lightbox/album.php")) {
 				$thumbnail .= "<a href=\"" . $object["file"] . "\" rel=\"clearbox[general_2]\" rev=\"" . $object['mid'] . "::" . $GEDCOM . "::" . PrintReady(htmlspecialchars($name,ENT_QUOTES,'UTF-8')) . "\">";
-			}else
-			// ---------------------------------------------------------------------------------------------
-
-			if (!empty($object['mid']) && $USE_MEDIA_VIEWER) {
+			} else if (!empty($object['mid']) && $USE_MEDIA_VIEWER) {
 				$thumbnail .= "<a href=\"".encode_url("mediaviewer.php?mid=".$object['mid'])."\" >";
-			}else{
+			} else {
 				$thumbnail .= "<a href=\"javascript:;\" onclick=\"return openImage('".rawurlencode($object["file"])."',$imgwidth, $imgheight);\">";
 			}
-			$thumbnail .= "<img id=\"box-$boxID-thumb\" src=\"".$object["thumb"]."\" vspace=\"0\" hspace=\"0\" class=\"$class\" alt=\"\" title=\"".PrintReady(htmlspecialchars(strip_tags($name),ENT_QUOTES,'UTF-8'))."\"";
+			$thumbnail .= "<img id=\"box-$boxID-thumb\" src=\"".$whichFile."\" vspace=\"0\" hspace=\"0\" class=\"$class\" alt=\"\" title=\"".PrintReady(htmlspecialchars(strip_tags($name),ENT_QUOTES,'UTF-8'))."\"";
 			if (!$show_full) $thumbnail .= " style=\"display: none;\"";
 			if ($imgsize) $thumbnail .= " /></a>";
 			else $thumbnail .= " />";
