@@ -629,7 +629,7 @@ $pgv_lang["alphabet_lower_help"]	= "~#pgv_lang[alphabet_lower]#~<br /><br />Las 
 $pgv_lang["multi_letter_alphabet"]		= "Alfabeto multiletra";
 $pgv_lang["multi_letter_alphabet_help"]	= "~#pgv_lang[multi_letter_alphabet]#~<br /><br />La combinaciones multi-letras que deban tratarse como una sola letra al clasificar las listas de nombres y títulos en este idioma.<br /><br />Algunos idiomas, húngaro y eslovaco por ejemplo, consideran que ciertas combinaciones de letras son letras distintas por sí mismas. El orden en que se especifican estas combinaciones de letras determina el orden en que se insertan en el alfabeto normal durante la clasificación.  Esto es importante cuando varias combinaciones multi-letra empiezan por la misma letra.  Salvo el caso de <b>ch</b>, estas combinaciones de letras se insertan en el alfabeto normal según su primera letra.  <b>ch</b> siempre se inserta detrás de <b>h</b>.<br />";
 $pgv_lang["multi_letter_equiv"]		= "Equivalencias de letras múltiples";
-$pgv_lang["multi_letter_equiv_help"]	= "~#pgv_lang[multi_letter_equiv]#~<br /><br />En algunos idiomas ocurre que algunos grupos de letras deban tratarse como si fueran una única letra al generar listas de nombres.<br /><br />Por ejemplo, en holandés, los nombres que comienzan por IJ deben listarse junto con los que empiezan por Y. En noriego, los nombres que empiezan por AA se listan con los que empiezan por &Aring;. En algunos idiomas, hay letras que pueden escribirse como un carácter o como dos. Por ejemplo, en eslovaco, los dos caracteres D y ž se pueden escribir como el caracter ǅ. Especificando las equivalencias aquí, puede hacer que los nombres que comienzan por estas letras aparezcan juntos en las páginas de listas de personas.<br /><br />El formato es una lista separada por comas de equivalentes. Para que funcione correctamente con bases de datos que reconocen la codificación UTF-8, debe especificar las equivalencias tanto en mayúsculas como en minúsculas. Este ejemplo muestra el formato a utilizar.<br /><br />Aa=&Aring;,aa=&aring;";
+$pgv_lang["multi_letter_equiv_help"]	= "~#pgv_lang[multi_letter_equiv]#~<br /><br />En algunos idiomas ocurre que algunos grupos de letras deban tratarse como si fueran una única letra al generar listas de nombres.<br /><br />Por ejemplo, en holandés, los nombres que comienzan por IJ deben listarse junto con los que empiezan por Y. En noruego, los nombres que empiezan por AA se listan con los que empiezan por &Aring;. En algunos idiomas, hay letras que pueden escribirse como un carácter o como dos. Por ejemplo, en eslovaco, los dos caracteres D y ž se pueden escribir como el carácter ǅ. Especificando las equivalencias aquí, puede hacer que los nombres que comienzan por estas letras aparezcan juntos en las páginas de listas de personas.<br /><br />El formato es una lista separada por comas de equivalentes. Para que funcione correctamente con bases de datos que reconocen la codificación UTF-8, debe especificar las equivalencias tanto en mayúsculas como en minúsculas. Este ejemplo muestra el formato a utilizar.<br /><br />Aa=&Aring;,aa=&aring;";
 $pgv_lang["dictionary_sort"]		= "Utilizar reglas de diccionario al clasificar";
 $pgv_lang["dictionary_sort_help"]	= "~#pgv_lang[dictionary_sort]#~<br /><br />Esta opción controlo cómo se clasifican los caracteres con marcas diacríticas.<br /><br />Se se fija a <b>#pgv_lang[yes]#</b>, todos los caracteres con marcas diacríticas se tratan como si no las tuvieran.  Estas marcas diacríticas sólo se tienen en cuenta cuando las palabras comparadas son en todo lo demás idénticas.  Si se fija a <b>#pgv_lang[no]#</b>, todas las letras con o sin marcas diacríticas se tratan como distintas.<br />";
 $pgv_lang["collation"]		= "Secuencia de clasificación de la base de datos";
