@@ -10,6 +10,7 @@
 
 
 Version 4.2.0 CA
+ - Merged: Merge changes r5235 - r5244 from the trunk. (windmillway)
  - Changed: Paths to files in new GEDFact_assistant/CENS/ directory <windmillway)
  - Added: New subdirectories to GEDFact_assistant module {windmillway)
  - Changed: Renamed census_assistant module to GEDFact_assistant module (windmillway)
@@ -67,6 +68,7 @@ Version 4.2.0 CA
 
 
 Version 4.2.1
+ - Fixed: [ 2694015 ] Incorrect handling of Highlighted image (canajun2eh)
  - Changed: Add language editor support for comments on variable definition lines (canajun2eh)
  - Changed: Add language editor support for var. names or text enclosed in apostrophes (canajun2eh)
  - Fixed: [ 2687480 ] Language file editor wrong output when string is ";" (canajun2eh)
